New Feature: Initiatives added
